[UPDATE] Altera estratégia de recuperação de senha e implementa sua documentação.
