# app/Http/Controllers/Auth/VerificationController.php
@@ -7,6 +7,12 @@ use App\Traits\Auth\RegistrationConfirmation;
 
 /**
  * Class VerificationController
+ *
+ *  @OA\Tag(
+ *     name="Projects",
+ *     description="API Endpoints of Projects"
+ * )
+ *
  * @package App\Http\Controllers\Auth
  */
 class VerificationController extends Controller
